--- a/public/about/index.html
+++ b/public/about/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="About I grew up in the Los Angeles area and love my family dearly. I stayed in LA County to complete my bachelor&rsquo;s in Physics and minor in Geophysics and Planetary Physics at UCLA. After undergrad I moved to Santa Cruz to complete my master&rsquo;s and doctorate in Astronomy and Astrophysics. During this time I got over my fear of the water and learned how to swim, eventually gaining the courage of get out on the ocean on a surfboard.">
 <meta name="author" content=" ">
 <link rel="canonical" href="//localhost:1313/about/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.ceedb4bfad9c836660a1794574b00e044af05e0e43d78e579aecd60de809fae9.css" integrity="sha256-zu20v62cg2ZgoXlFdLAOBErwXg5D145XmuzWDegJ&#43;uk=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.d7fdc562d4e7582c584006fdbe7c2196016cb977c121e18d50df322c9aa603b7.css" integrity="sha256-1/3FYtTnWCxYQAb9vnwhlgFsuXfBIeGNUN8yLJqmA7c=" rel="preload stylesheet" as="style">
 <link rel="icon" href="//localhost:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="//localhost:1313/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="//localhost:1313/favicon-32x32.png">
@@ -173,6 +173,16 @@
 </article>
     </main>
     
+<footer class="footer">
+    &copy; 2025 Dr. Brittany E. Miles
+    <span>
+    &middot;  Powered by 
+        <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
+        <a href="https://github.com/pmichaillat/hugo-website/" rel="noopener" target="_blank">a modified version</a>
+         of 
+        <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
+    </span>
+</footer>
 
 <script>
     let menu = document.getElementById('menu')
