--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <meta name="description" content="I am an astronomy postdoc at the University of Arizona. consequat.">
 <meta name="author" content="Brittany E. Miles">
 <link rel="canonical" href="//localhost:1313/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.ceedb4bfad9c836660a1794574b00e044af05e0e43d78e579aecd60de809fae9.css" integrity="sha256-zu20v62cg2ZgoXlFdLAOBErwXg5D145XmuzWDegJ&#43;uk=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.d7fdc562d4e7582c584006fdbe7c2196016cb977c121e18d50df322c9aa603b7.css" integrity="sha256-1/3FYtTnWCxYQAb9vnwhlgFsuXfBIeGNUN8yLJqmA7c=" rel="preload stylesheet" as="style">
 <link rel="icon" href="//localhost:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="//localhost:1313/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="//localhost:1313/favicon-32x32.png">
@@ -86,10 +86,10 @@
 <body class="list" id="top">
     <main class="main"><div class="profile">
     <div class="profile_inner">
-        <img draggable="false" src="//localhost:1313/headshot2.JPG" alt="Brittany" title="Brittany"
-            height="200" width="200" />
+        <img draggable="false" src="//localhost:1313/bd.png" alt="Brittany" title="Brittany"
+            height="465" width="700" />
         <h1>Dr. Brittany E. Miles</h1>
-        <span>I use mid-infrared spectroscopy to characterize the atmospheres of brown dwarfs and exoplanets. I want to improve ground-based mid-infrared instruments to characterize existing exoplanets and find Earth-like planets. I am currently a 51 Pegasi b and Presidential Postdoctoral Fellow at the University of Arizona. Fall 2025 I will join the faculty at Steward Observatory as an assistant professor.</span><div class="social-icons">
+        <span>I am an <b>assistant professor</b> at Steward Observatory within the University of Arizona. I use mid-infrared spectroscopy to characterize the atmospheres of brown dwarfs and exoplanets. I want to improve ground-based mid-infrared instruments to characterize existing exoplanets and find Earth-like planets.</span><div class="social-icons">
     <a href="CV_BEM.pdf" target="_blank" rel="noopener noreferrer me" title="CV">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
     <path
@@ -132,9 +132,15 @@
                     CV
                 </span>
             </a>
-            <a class="button" href="" rel="noopener" title="Publications">
+            <a class="button" href="https://ui.adsabs.harvard.edu/search/q=docs%28library%2FEN60j0GSQr2qKjHKjcZCEg%29&amp;sort=date%20desc%2C%20bibcode%20desc&amp;p_=0" rel="noopener" title="Publications">
                 <span class="button-inner">
-                    Publications
+                    Publications&nbsp;
+                    <svg fill="none" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round"
+                        stroke-linejoin="round" stroke-width="2.5" viewBox="0 0 24 24" height="14" width="14">
+                        <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"></path>
+                        <path d="M15 3h6v6"></path>
+                        <path d="M10 14L21 3"></path>
+                    </svg>
                 </span>
             </a>
             <a class="button" href="https://infraredastronomy.tumblr.com/" rel="noopener" title="Blog">
@@ -154,6 +160,16 @@
 
     </main>
     
+<footer class="footer">
+    &copy; 2025 Dr. Brittany E. Miles
+    <span>
+    &middot;  Powered by 
+        <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
+        <a href="https://github.com/pmichaillat/hugo-website/" rel="noopener" target="_blank">a modified version</a>
+         of 
+        <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
+    </span>
+</footer>
 
 <script>
     let menu = document.getElementById('menu')
